add support for GeoLite City database

--- a/extplugins/conf/plugin_advgeoip.ini
+++ b/extplugins/conf/plugin_advgeoip.ini
@@ -1,7 +1,14 @@
 [settings]
+# Geolocation database type. Allowed values:
+#       city ​​- if GeoLite City database is used
+#       country - when the GeoLite Country database is used
+db_type: city
+
 # Get the GeoIP Lite Country Database from http://dev.maxmind.com/geoip/legacy/geolite
 # The path to the GeoIP.dat
-geoip_db: G:\\GeoIP.dat
+# Example:
+#           geoip_db: G:\\GeoIP.dat
+geoip_db: G:\\GeoLiteCity.dat
 
 
 [commands]
